--- a/.gitignore
+++ b/.gitignore
@@ -1,132 +1,129 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+#-------------------------
+# Operating Specific Junk Files
+#-------------------------
 
-# C extensions
-*.so
+# OS X
+.DS_Store
+.AppleDouble
+.LSOverride
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# OS X Thumbnails
+._*
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+Desktop.ini
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
 
-# Translations
-*.mo
-*.pot
+# Windows shortcuts
+*.lnk
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+# Linux
+*~
 
-# Flask stuff:
-instance/
-.webassets-cache
+# KDE directory preferences
+.directory
 
-# Scrapy stuff:
-.scrapy
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
 
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
+#-------------------------
+# Environment Files
+#-------------------------
+# These should never be under version control,
+# as it poses a security risk.
 .env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+.vagrant
+Vagrantfile
 
-# Spyder project settings
-.spyderproject
-.spyproject
+#-------------------------
+# Temporary Files
+#-------------------------
+writable/cache/*
+!writable/cache/index.html
 
-# Rope project settings
-.ropeproject
+writable/logs/*
+!writable/logs/index.html
 
-# mkdocs documentation
-/site
+writable/session/*
+!writable/session/index.html
 
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
+writable/uploads/*
+!writable/uploads/index.html
 
-# Pyre type checker
-.pyre/
+writable/debugbar/*
 
+php_errors.log
+
+#-------------------------
+# User Guide Temp Files
+#-------------------------
+user_guide_src/build/*
+user_guide_src/cilexer/build/*
+user_guide_src/cilexer/dist/*
+user_guide_src/cilexer/pycilexer.egg-info/*
+
+#-------------------------
+# Test Files
+#-------------------------
+tests/coverage*
+
+# Don't save phpunit under version control.
+phpunit
+
+#-------------------------
+# Composer
+#-------------------------
+vendor/
+
+#-------------------------
+# IDE / Development Files
+#-------------------------
+
+# Modules Testing
+_modules/*
+
+# phpenv local config
+.php-version
+
+# Jetbrains editors (PHPStorm, etc)
+.idea/
+*.iml
+
+# Netbeans
+nbproject/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+.nb-gradle/
+
+# Sublime Text
+*.tmlanguage.cache
+*.tmPreferences.cache
+*.stTheme.cache
+*.sublime-workspace
+*.sublime-project
+.phpintel
+/api/
+
+# Visual Studio Code
+.vscode/
+
+/results/
+/phpunit*.xml
+/.phpunit.*.cache
 \vendor
 \.idea
+
