feat: 更新许可证 Apache-2.0

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require-dev": {
         "php": "^7.2"
     },
-    "license": "Apache",
+    "license": "Apache-2.0",
     "authors": [
         {
             "name": "wangxiaoyu",
