feat: 修改命名空间psr

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "minimum-stability": "dev",
     "autoload": {
       "psr-4": {
-        "WxSpider\\": "src/"
+        "Samkeke\\WxSpider\\": "src/"
       }
     }
 }
